syntax = "proto3";

package photo;

option go_package = ".pkg/pb";

import "google/protobuf/timestamp.proto";

service PhotoService{
  rpc UpdatePhotographerPhoto(UpdatePhotographerPhotoRequest) returns (UpdatePhotographerPhotoResponse);
  rpc UpdateFaceRecogPhoto (UpdateFaceRecogPhotoRequest) returns (UpdateFaceRecogPhotoResponse);  
  rpc CreatePhoto(CreatePhotoRequest) returns (CreatePhotoResponse);
}

message Photo {
  string id = 1;
  string creator_id = 2;
  string title = 3;
  string owned_by_user_id = 4;
  string compressed_url = 5;
  string is_this_you_url = 6;
  string your_moments_url = 7;
  string collection_url = 8;

  int32 price = 9;
  string price_str = 10;

  google.protobuf.Timestamp original_at = 11;
  google.protobuf.Timestamp created_at = 12;
  google.protobuf.Timestamp updated_at = 13;

  PhotoDetail detail = 14; // Tambahkan ini
}

message PhotoDetail {
  string id = 1;
  string photo_id = 2;
  int64 size = 3;
  string type = 4;
  string checksum = 5;
  int32 width = 6;   // int8 di Go, gunakan int32 di proto karena tidak ada int8
  int32 height = 7;
  string url = 8;
  string your_moments_type = 9; // Enum nanti bisa kita define kalau perlu

  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
}

message CreatePhotoRequest {
  Photo photo = 1;
}

message CreatePhotoResponse {
  int64 status = 1;
  string error = 2;
}

message UpdatePhotographerPhotoRequest {
  string id = 1;
  repeated string user_id = 2; // Gunakan repeated untuk array
}

message UpdatePhotographerPhotoResponse {
  int64 status = 1;
  string error = 2;
}

message UpdateFaceRecogPhotoRequest {
  string id = 1;
  repeated string photo_id = 2; // Gunakan repeated untuk array
}

message UpdateFaceRecogPhotoResponse {
  int64 status = 1;
  string error = 2;
}

enum SimilarityLevelEnum {
  SIMILARITY_UNKNOWN = 0;
  SIMILARITY_LOW = 1;
  SIMILARITY_MEDIUM = 2;
  SIMILARITY_HIGH = 3;
}

message UserSimilarPhoto {
  string id = 1;                     // ID unik (jika diperlukan dari client)
  string photo_id = 2;               // ID foto
  string user_id = 3;                // ID user
  SimilarityLevelEnum similarity = 4;// Level kemiripan
  bool is_wishlist = 5;              // Flag wishlist
  bool is_resend = 6;                // Flag resend
  bool is_cart = 7;                  // Flag cart
  bool is_favorite = 8;              // Flag favorite
  google.protobuf.Timestamp created_at = 9; // Waktu pembuatan
  google.protobuf.Timestamp updated_at = 10;// Waktu pembaruan
}

message CreateUserSimilarPhotoRequest {
  string is_this_you_url = 1;
  string your_moments_url = 2;
  repeated UserSimilarPhoto user_similar_photo = 3;
}

message CreateUserSimilarPhotoResponse {
  int64 status = 1;
  string error = 2;
}